cmake_minimum_required(VERSION 3.20)

add_subdirectory(qtbindings/qtscript_core)
add_subdirectory(qtbindings/qtscript_custom)
add_subdirectory(qtbindings/qtscript_gui)
add_subdirectory(qtbindings/qtscript_multimedia)
add_subdirectory(qtbindings/qtscript_network)
add_subdirectory(qtbindings/qtscript_opengl)
add_subdirectory(qtbindings/qtscript_printsupport)
add_subdirectory(qtbindings/qtscript_sql)
add_subdirectory(qtbindings/qtscript_uitools)
add_subdirectory(qtbindings/qtscript_widgets)
add_subdirectory(qtbindings/qtscript_xml)
