cmake_minimum_required(VERSION 3.20)

project(coordinatesystem LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(OUTPUT_DIRECTORY ${OUTPUT_DIRECTORY}/plugins/${PROJECT_NAME})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_DIRECTORY})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIRECTORY})

find_package(QT NAMES Qt6 Qt5 COMPONENTS Core REQUIRED)
find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core Gui Widgets REQUIRED)

file(GLOB_RECURSE QRC_FILES *.qrc)
file(GLOB_RECURSE SOURCES *.cpp *.h *.ui)
file(GLOB_RECURSE TS_FILES *.ts)

add_library(${PROJECT_NAME} SHARED
    ${QRC_FILES}
    ${SOURCES}
    ${TS_FILES}
)

COPY_PLUGIN(${CMAKE_CURRENT_SOURCE_DIR} ${OUTPUT_DIRECTORY})

target_link_libraries(${PROJECT_NAME} PRIVATE
    Qt${QT_VERSION_MAJOR}::Core
    Qt${QT_VERSION_MAJOR}::Gui
    Qt${QT_VERSION_MAJOR}::Widgets
)

target_compile_definitions(${PROJECT_NAME} PRIVATE ${PROJECT_NAME}_LIBRARY)

