if(APPLE)
    set(SCRIPT_DESTINATION "Candle.app/Contents/MacOS/script")
else()
    set(SCRIPT_DESTINATION "script")
endif()

add_subdirectory(qtscript_core)
add_subdirectory(qtscript_custom)
add_subdirectory(qtscript_gui)
add_subdirectory(qtscript_multimedia)
add_subdirectory(qtscript_network)
add_subdirectory(qtscript_opengl)
add_subdirectory(qtscript_printsupport)
add_subdirectory(qtscript_sql)
add_subdirectory(qtscript_uitools)
add_subdirectory(qtscript_widgets)
add_subdirectory(qtscript_xml)